--- a/roles/oidc-extension/templates/index.html
+++ b/roles/oidc-extension/templates/index.html
@@ -10,5 +10,7 @@ Follow the progress from idp-process.log<br><br>
 <a href="https://192.168.0.150/idp/profile/oidc/authorize?response_type=id_token&client_id=demo_unknown&response_mode=query&redirect_uri=https://192.168.0.150/static&scope=openid&state=hLNA0gJsG9a1V3KSmykmGxcIMsTCMePNcG9PbDUxIv8&nonce=pYYI6XRM_to3Vd5eMhI2AxY7GPQ0Bu1gqyOiWzq_7PA">Authentication request: unknown client id</a><br>
 <a href="https://192.168.0.150/idp/profile/oidc/authorize?response_type=id_token&client_id=demo_rp&response_mode=query&redirect_uri=https://192.168.0.150/static&scope=openid&state=hLNA0gJsG9a1V3KSmykmGxcIMsTCMePNcG9PbDUxIv8&nonce=pYYI6XRM_to3Vd5eMhI2AxY7GPQ0Bu1gqyOiWzq_7PA&acr_values=password">Authentication request, acr=password</a><br>
 <a href="https://192.168.0.150/idp/profile/oidc/authorize?response_type=id_token&client_id=demo_rp&response_mode=query&redirect_uri=https://192.168.0.150/static&scope=openid&state=hLNA0gJsG9a1V3KSmykmGxcIMsTCMePNcG9PbDUxIv8&nonce=pYYI6XRM_to3Vd5eMhI2AxY7GPQ0Bu1gqyOiWzq_7PA&acr_values=notsupported">Authentication request, acr=notsupported</a><br>
+<br/>
+<a href="https://192.168.0.150/idp/profile/oidc/register">Dynamic registration request with GET (should produce JSON error)</a><br>
 </body>
 </html>
