--- a/roles/oidc-extension/templates/attribute-filter.xml
+++ b/roles/oidc-extension/templates/attribute-filter.xml
@@ -9,8 +9,103 @@
 	xmlns:oidcext="org.geant.idpextension.oidc.attribute.filter"
 	xsi:schemaLocation="urn:mace:shibboleth:2.0:afp http://shibboleth.net/schema/idp/shibboleth-afp.xsd org.geant.idpextension.oidc.attribute.filter classpath:/schema/idp-oidc-extension-afp.xsd">
 
+
+	<!-- This demonstrates a rule that releases email claims in response to 
+		all oidc authentication requests having scope email. The requester needs 
+		to have scope email as a registered scope. -->
+
+	<AttributeFilterPolicy id="OPENID_SCOPE_EMAIL">
+		<PolicyRequirementRule xsi:type="oidcext:OIDCScope"
+			value="email" />
+		<AttributeRule attributeID="email">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="email_verified">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+	</AttributeFilterPolicy>
+
+	<!-- This demonstrates a rule that releases address claims in response to 
+		all oidc authentication requests having scope address. The requester needs 
+		to have scope address as a registered scope. -->
+
+	<AttributeFilterPolicy id="OPENID_SCOPE_ADDRESS">
+		<PolicyRequirementRule xsi:type="oidcext:OIDCScope"
+			value="address" />
+		<AttributeRule attributeID="address">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+	</AttributeFilterPolicy>
+
+	<!-- This demonstrates a rule that releases phone claims in response to 
+		all oidc authentication requests having scope phone. The requester needs 
+		to have scope phone as a registered scope. -->
+
+	<AttributeFilterPolicy id="OPENID_SCOPE_PHONE">
+		<PolicyRequirementRule xsi:type="oidcext:OIDCScope"
+			value="phone" />
+		<AttributeRule attributeID="phone_number">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="phone_number_verified">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+	</AttributeFilterPolicy>
+
+	<!-- This demonstrates a rule that releases profile claims in response to 
+		all oidc authentication requests having scope profile. The requester needs 
+		to have scope profile as a registered scope. -->
+
+	<AttributeFilterPolicy id="OPENID_SCOPE_PROFILE">
+		<PolicyRequirementRule xsi:type="oidcext:OIDCScope"
+			value="profile" />
+		<AttributeRule attributeID="name">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="family_name">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="given_name">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="middle_name">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="nickname">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="preferred_username">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="profile">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="picture">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="website">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="gender">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="birthdate">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="zoneinfo">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="locale">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+		<AttributeRule attributeID="updated_at">
+			<PermitValueRule xsi:type="ANY" />
+		</AttributeRule>
+	</AttributeFilterPolicy>
+
 	<!-- This demonstrates a rule that releases a claim in response to all oidc 
 		authentication requests -->
+
 	<AttributeFilterPolicy id="ALL_OPENID_CLIENTS">
 		<PolicyRequirementRule xsi:type="oidcext:OIDCScope"
 			value="openid" />
@@ -19,31 +114,20 @@
 		</AttributeRule>
 	</AttributeFilterPolicy>
 
-	<!-- This demonstrates a rule that releases claims in response to oidc authentication 
-		request of demo_rp with requested scope info -->
-	<AttributeFilterPolicy id="DEMO_RP_SCOPE_INFO">
+	<!-- This demonstrates a rule that releases claim in response to oidc authentication 
+		request of demo_rp if the claim is specifically requested -->
+
+	<AttributeFilterPolicy id="DEMO_RP_REQUEST_CLAIM">
 		<PolicyRequirementRule xsi:type="AND">
 			<Rule xsi:type="Requester" value="demo_rp" />
-			<Rule xsi:type="oidcext:OIDCScope" value="info" />
 		</PolicyRequirementRule>
-		<AttributeRule attributeID="eduPersonAffiliation">
-			<PermitValueRule xsi:type="ANY" />
+		<AttributeRule attributeID="age">
+			<PermitValueRule xsi:type="oidcext:AttributeInOIDCRequestedClaims" />
 		</AttributeRule>
-		<AttributeRule attributeID="mail">
-			<PermitValueRule xsi:type="ANY" />
+		<AttributeRule attributeID="eduPersonAffiliation">
+			<PermitValueRule xsi:type="oidcext:AttributeInOIDCRequestedClaims" />
 		</AttributeRule>
 	</AttributeFilterPolicy>
-
-        <!-- This demonstrates a rule that releases claim in response to oidc authentication
-                request of demo_rp if the claim is specifically requested -->
-        <AttributeFilterPolicy id="DEMO_RP_REQUEST_CLAIM">
-                <PolicyRequirementRule xsi:type="AND">
-                        <Rule xsi:type="Requester" value="demo_rp" />
-                </PolicyRequirementRule>
-                <AttributeRule attributeID="age">
-                        <PermitValueRule xsi:type="oidcext:AttributeInOIDCRequestedClaims" />
-                </AttributeRule>
-        </AttributeFilterPolicy>
 
 </AttributeFilterPolicyGroup>
 
