--- a/roles/oidc-extension/templates/attribute-resolver.xml
+++ b/roles/oidc-extension/templates/attribute-resolver.xml
@@ -13,17 +13,12 @@
     encoders, and data connectors. Deployers should refer to the Shibboleth
     documentation for a complete list of components and their options.
 -->
-<AttributeResolver
-        xmlns="urn:mace:shibboleth:2.0:resolver"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xmlns:oidcext="org.geant.idpextension.oidc.attribute.encoder"
-        xsi:schemaLocation="urn:mace:shibboleth:2.0:resolver http://shibboleth.net/schema/idp/shibboleth-attribute-resolver.xsd org.geant.idpextension.oidc.attribute.encoder classpath:/schema/idp-oidc-extension-attribute-encoder.xsd">
-
-
+<AttributeResolver xmlns="urn:mace:shibboleth:2.0:resolver" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:oidcext="org.geant.idpextension.oidc.attribute.encoder" xsi:schemaLocation="urn:mace:shibboleth:2.0:resolver http://shibboleth.net/schema/idp/shibboleth-attribute-resolver.xsd org.geant.idpextension.oidc.attribute.encoder classpath:/schema/idp-oidc-extension-attribute-encoder.xsd">
     <!-- ========================================== -->
     <!--      Attribute Definitions                 -->
     <!-- ========================================== -->
-
+    
+    
     <!--
     The EPPN is the "standard" federated username in higher ed.
     For guidelines on the implementation of this attribute, refer
@@ -37,9 +32,10 @@
         <Dependency ref="uid" />
         <AttributeEncoder xsi:type="SAML1ScopedString" name="urn:mace:dir:attribute-def:eduPersonPrincipalName" encodeType="false" />
         <AttributeEncoder xsi:type="SAML2ScopedString" name="urn:oid:1.3.6.1.4.1.5923.1.1.1.6" friendlyName="eduPersonPrincipalName" encodeType="false" />
-        <AttributeEncoder xsi:type="oidcext:OIDCScopedString" name="eppn"/>
+        <AttributeEncoder xsi:type="oidcext:OIDCScopedString" name="eppn" />
     </AttributeDefinition>
-
+    
+    
     <!--
     The uid is the closest thing to a "standard" LDAP attribute
     representing a local username, but you should generally *never*
@@ -49,7 +45,8 @@
         <AttributeEncoder xsi:type="SAML1String" name="urn:mace:dir:attribute-def:uid" encodeType="false" />
         <AttributeEncoder xsi:type="SAML2String" name="urn:oid:0.9.2342.19200300.100.1.1" friendlyName="uid" encodeType="false" />
     </AttributeDefinition>
-
+    
+    
     <!--
     In the rest of the world, the email address is the standard identifier,
     despite the problems with that practice. Consider making the EPPN
@@ -57,44 +54,142 @@
 
     This demonstrates use of OIDCString encoder.
     -->
-    <AttributeDefinition id="mail" xsi:type="Template">
+    <AttributeDefinition id="email" xsi:type="Template">
         <Dependency ref="uid" />
         <AttributeEncoder xsi:type="SAML1String" name="urn:mace:dir:attribute-def:mail" encodeType="false" />
         <AttributeEncoder xsi:type="SAML2String" name="urn:oid:0.9.2342.19200300.100.1.3" friendlyName="mail" encodeType="false" />
-        <AttributeEncoder xsi:type="oidcext:OIDCString" name="mail"/>
-        <Template>
-          <![CDATA[
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="email" />
+        <Template><![CDATA[
                ${uid}@example.org
-          ]]>
-	</Template>
+          ]]></Template>
         <SourceAttribute>uid</SourceAttribute>
     </AttributeDefinition>
-
+    
+    
+    <!-- Start of static attributes. In real deployment you would use something else than static attributes for most of these attributes/claims -->
+    
+    
     <!--
     This is an example of an attribute sourced from a data connector.
 
     This demonstrates use of OIDCString as array encoder.
     -->
     <AttributeDefinition id="eduPersonAffiliation" xsi:type="Simple" sourceAttributeID="affiliation">
-        <Dependency ref="staticAttributes"/>
-        <AttributeEncoder xsi:type="oidcext:OIDCString" asArray="true" name="affiliation"/>
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" asArray="true" name="affiliation" />
     </AttributeDefinition>
-
     <!-- 
     This is an example of an attribute sourced from a data connector.
 
     This demonstrates use of OIDCString as int encoder.
     -->
     <AttributeDefinition id="age" xsi:type="Simple" sourceAttributeID="age">
-        <Dependency ref="staticAttributes"/>
-        <AttributeEncoder xsi:type="oidcext:OIDCString" asInt="true" name="age"/>
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" asInt="true" name="age" />
     </AttributeDefinition>
-
-
+    
+    
+    <!-- rest of the claims needed to have set of standard claims -->
+    
+    <AttributeDefinition id="phone_number" xsi:type="Simple" sourceAttributeID="phone_number">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="phone_number" />
+    </AttributeDefinition>
+    
+    <!-- boolean not supported yet!
+    <AttributeDefinition id="phone_number_verified" xsi:type="Simple" sourceAttributeID="phone_number_verified">
+        <Dependency ref="staticAttributes"/>
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="phone_number_verified"/>
+    </AttributeDefinition>
+    -->
+    
+    <!-- JSONObject as in address not supported yet!
+    <AttributeDefinition id="address" xsi:type="Simple" sourceAttributeID="address">
+        <Dependency ref="staticAttributes"/>
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="address"/>
+    </AttributeDefinition>
+    -->
+   
+    <!-- boolean not supported yet!
+    <AttributeDefinition id="email_verified" xsi:type="Simple" sourceAttributeID="email">
+        <Dependency ref="email" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="phone_verified"/>
+    </AttributeDefinition>
+     -->
+    
+    <AttributeDefinition id="name" xsi:type="Simple" sourceAttributeID="name">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="name" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="family_name" xsi:type="Simple" sourceAttributeID="family_name">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="family_name" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="given_name" xsi:type="Simple" sourceAttributeID="given_name">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="given_name" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="middle_name" xsi:type="Simple" sourceAttributeID="middle_name">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="middle_name" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="nickname" xsi:type="Simple" sourceAttributeID="nickname">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="nickname" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="preferred_username" xsi:type="Simple" sourceAttributeID="preferred_username">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="preferred_username" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="profile" xsi:type="Simple" sourceAttributeID="profile">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="profile" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="picture" xsi:type="Simple" sourceAttributeID="picture">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="picture" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="web_site" xsi:type="Simple" sourceAttributeID="web_site">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="web_site" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="gender" xsi:type="Simple" sourceAttributeID="gender">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="gender" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="birthdate" xsi:type="Simple" sourceAttributeID="birthdate">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="birthdate" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="zoneinfo" xsi:type="Simple" sourceAttributeID="zoneinfo">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="zoneinfo" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="locale" xsi:type="Simple" sourceAttributeID="locale">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="locale" />
+    </AttributeDefinition>
+    
+    <AttributeDefinition id="updated_at" xsi:type="Simple" sourceAttributeID="updated_at">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" asInt="true" name="updated_at" />
+    </AttributeDefinition>
+    
     <!-- ========================================== -->
     <!--      Data Connectors                       -->
     <!-- ========================================== -->
-
     <DataConnector id="staticAttributes" xsi:type="Static">
         <Attribute id="affiliation">
             <Value>member</Value>
@@ -104,7 +199,50 @@
             <Value>Fiftyfive</Value>
             <Value>55</Value>
         </Attribute>
+        <Attribute id="phone_number">
+            <Value>+1 (604) 555-1234;ext=5678</Value>
+        </Attribute>
+        <Attribute id="name">
+            <Value>Mr.Teppo Matias Testaaja</Value>
+        </Attribute>
+        <Attribute id="family_name">
+            <Value>Testaaja</Value>
+        </Attribute>
+        <Attribute id="given_name">
+            <Value>Teppo Matias</Value>
+        </Attribute>
+        <Attribute id="middle_name">
+            <Value>Matias</Value>
+        </Attribute>
+        <Attribute id="nickname">
+            <Value>TT</Value>
+        </Attribute>
+        <Attribute id="preferred_username">
+            <Value>ttester</Value>
+        </Attribute>
+        <Attribute id="profile">
+            <Value>https://fi.wikipedia.org/wiki/Tom_Cruise</Value>
+        </Attribute>
+        <Attribute id="picture">
+            <Value>https://pixabay.com/fi/pentu-kissa-kukka-potin-tabby-pentu-2766820/</Value>
+        </Attribute>
+        <Attribute id="website">
+            <Value>https://www.facebook.com/officialtomcruise/</Value>
+        </Attribute>
+        <Attribute id="gender">
+            <Value>male</Value>
+        </Attribute>
+        <Attribute id="birthdate">
+            <Value>1962</Value>
+        </Attribute>
+        <Attribute id="zoneinfo">
+            <Value>America/Los_Angeles</Value>
+        </Attribute>
+        <Attribute id="locale">
+            <Value>en-US</Value>
+        </Attribute>
+        <Attribute id="updated_at">
+            <Value>1509450347</Value>
+        </Attribute>
     </DataConnector>
-
 </AttributeResolver>
-
