--- a/roles/oidc-extension/templates/attribute-filter.xml
+++ b/roles/oidc-extension/templates/attribute-filter.xml
@@ -118,9 +118,8 @@
 		request of demo_rp if the claim is specifically requested -->
 
 	<AttributeFilterPolicy id="DEMO_RP_REQUEST_CLAIM">
-		<PolicyRequirementRule xsi:type="AND">
-			<Rule xsi:type="Requester" value="demo_rp" />
-		</PolicyRequirementRule>
+		<PolicyRequirementRule xsi:type="Requester"
+			value="demo_rp" />
 		<AttributeRule attributeID="age">
 			<PermitValueRule xsi:type="oidcext:AttributeInOIDCRequestedClaims" />
 		</AttributeRule>
