--- a/roles/oidc-extension/templates/jetty-rewrite.xml
+++ b/roles/oidc-extension/templates/jetty-rewrite.xml
@@ -29,6 +29,16 @@
 
       <Call name="addRule">
         <Arg>
+          <New class="org.eclipse.jetty.rewrite.handler.HeaderPatternRule">
+            <Set name="pattern">/.well-known/openid-configuration</Set>
+            <Set name="name">Content-Type</Set>
+            <Set name="value">application/json</Set>
+          </New>
+        </Arg>
+      </Call>
+
+      <Call name="addRule">
+        <Arg>
           <New class="org.eclipse.jetty.rewrite.handler.RewritePatternRule">
             <Set name="pattern">/.well-known/webfinger</Set>
             <Set name="replacement">/idp/profile/oidc/webfinger</Set>
