Included link to mod_auth_openidc

--- a/roles/oidc-extension/templates/index.html
+++ b/roles/oidc-extension/templates/index.html
@@ -17,5 +17,7 @@ Follow the progress from idp-process.log<br><br>
 <a href="https://192.168.0.150/idp/profile/oidc/authorize?response_type=id_token&client_id=demo_rp&response_mode=query&redirect_uri=https://192.168.0.150/static&scope=openid&state=hLNA0gJsG9a1V3KSmykmGxcIMsTCMePNcG9PbDUxIv8&nonce=pYYI6XRM_to3Vd5eMhI2AxY7GPQ0Bu1gqyOiWzq_7PA&acr_values=notsupported">Authentication request, acr=notsupported</a><br>
 <br/>
 <a href="https://192.168.0.150/idp/profile/oidc/register">Dynamic registration request with GET (should produce JSON error)</a><br>
+<br/>
+<a href="https://192.168.0.150:8443/protected/">mod_auth_openidc with dynamic registration (use	e.g. teppo@192.168.0.150 as username)</a><br>
 </body>
 </html>
