--- a/roles/oidc-extension/templates/relying-party.xml
+++ b/roles/oidc-extension/templates/relying-party.xml
@@ -46,6 +46,7 @@
                 <ref bean="SAML2.ArtifactResolution" />
                 <ref bean="Liberty.SSOS" />
        	       	<bean parent="OIDC.SSO" p:postAuthenticationFlows="attribute-release" />
+       	       	<bean parent="OIDC.UserInfo"/>
             </list>
         </property>
     </bean>
