--- a/roles/oidc-extension/templates/attribute-resolver.xml
+++ b/roles/oidc-extension/templates/attribute-resolver.xml
@@ -1,193 +1,202 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-    This file is an EXAMPLE configuration file. While the configuration
-    presented in this example file is semi-functional, it isn't very
-    interesting. It is here only as a starting point for your deployment
-    process.
-
-    Very few attribute definitions and data connectors are demonstrated,
-    and the data is derived statically from the logged-in username and a
-    static example connector.
-
-    Attribute-resolver-full.xml contains more examples of attributes,
-    encoders, and data connectors. Deployers should refer to the Shibboleth
-    documentation for a complete list of components and their options.
--->
-<AttributeResolver xmlns="urn:mace:shibboleth:2.0:resolver" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:oidcext="org.geant.idpextension.oidc.attribute.encoder" xsi:schemaLocation="urn:mace:shibboleth:2.0:resolver http://shibboleth.net/schema/idp/shibboleth-attribute-resolver.xsd org.geant.idpextension.oidc.attribute.encoder classpath:/schema/idp-oidc-extension-attribute-encoder.xsd">
+<!-- This file is an EXAMPLE configuration file. While the configuration presented in this example file is semi-functional, 
+    it isn't very interesting. It is here only as a starting point for your deployment process. Very few attribute definitions 
+    and data connectors are demonstrated, and the data is derived statically from the logged-in username and a static example 
+    connector. Attribute-resolver-full.xml contains more examples of attributes, encoders, and data connectors. Deployers should 
+    refer to the Shibboleth documentation for a complete list of components and their options. -->
+<AttributeResolver xmlns="urn:mace:shibboleth:2.0:resolver" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:oidcext="org.geant.idpextension.oidc.attribute.encoder"
+    xsi:schemaLocation="urn:mace:shibboleth:2.0:resolver http://shibboleth.net/schema/idp/shibboleth-attribute-resolver.xsd org.geant.idpextension.oidc.attribute.encoder classpath:/schema/idp-oidc-extension-attribute-encoder.xsd">
     <!-- ========================================== -->
-    <!--      Attribute Definitions                 -->
+    <!-- Attribute Definitions -->
     <!-- ========================================== -->
-    
-    
-    <!--
-    The EPPN is the "standard" federated username in higher ed.
-    For guidelines on the implementation of this attribute, refer
-    to the Shibboleth and eduPerson documentation. Above all, do
-    not expose a value for this attribute without considering the
-    long term implications.
 
-    This demonstrates use of OIDCScopedString encoder.
-    -->
-    <AttributeDefinition id="eduPersonPrincipalName" xsi:type="Scoped" scope="%{idp.scope}" sourceAttributeID="uid">
+
+    <!-- The EPPN is the "standard" federated username in higher ed. For guidelines on the implementation of this attribute, 
+        refer to the Shibboleth and eduPerson documentation. Above all, do not expose a value for this attribute without considering 
+        the long term implications. This demonstrates use of OIDCScopedString encoder. -->
+    <AttributeDefinition id="eduPersonPrincipalName" xsi:type="Scoped" scope="%{idp.scope}"
+        sourceAttributeID="uid">
         <Dependency ref="uid" />
-        <AttributeEncoder xsi:type="SAML1ScopedString" name="urn:mace:dir:attribute-def:eduPersonPrincipalName" encodeType="false" />
-        <AttributeEncoder xsi:type="SAML2ScopedString" name="urn:oid:1.3.6.1.4.1.5923.1.1.1.6" friendlyName="eduPersonPrincipalName" encodeType="false" />
+        <AttributeEncoder xsi:type="SAML1ScopedString" name="urn:mace:dir:attribute-def:eduPersonPrincipalName"
+            encodeType="false" />
+        <AttributeEncoder xsi:type="SAML2ScopedString" name="urn:oid:1.3.6.1.4.1.5923.1.1.1.6"
+            friendlyName="eduPersonPrincipalName" encodeType="false" />
         <AttributeEncoder xsi:type="oidcext:OIDCScopedString" name="eppn" />
     </AttributeDefinition>
-    
-    
-    <!--
-    The uid is the closest thing to a "standard" LDAP attribute
-    representing a local username, but you should generally *never*
-    expose uid to federated services, as it is rarely globally unique.
-    -->
+
+
+    <!-- The uid is the closest thing to a "standard" LDAP attribute representing a local username, but you should generally 
+        *never* expose uid to federated services, as it is rarely globally unique. -->
     <AttributeDefinition id="uid" xsi:type="PrincipalName">
         <AttributeEncoder xsi:type="SAML1String" name="urn:mace:dir:attribute-def:uid" encodeType="false" />
-        <AttributeEncoder xsi:type="SAML2String" name="urn:oid:0.9.2342.19200300.100.1.1" friendlyName="uid" encodeType="false" />
+        <AttributeEncoder xsi:type="SAML2String" name="urn:oid:0.9.2342.19200300.100.1.1" friendlyName="uid"
+            encodeType="false" />
     </AttributeDefinition>
-    
-    
-    <!--
-    In the rest of the world, the email address is the standard identifier,
-    despite the problems with that practice. Consider making the EPPN
-    value the same as your official email addresses whenever possible.
 
-    This demonstrates use of OIDCString encoder.
-    -->
+
+    <!-- In the rest of the world, the email address is the standard identifier, despite the problems with that practice. 
+        Consider making the EPPN value the same as your official email addresses whenever possible. This demonstrates use of OIDCString 
+        encoder. -->
     <AttributeDefinition id="email" xsi:type="Template">
         <Dependency ref="uid" />
         <AttributeEncoder xsi:type="SAML1String" name="urn:mace:dir:attribute-def:mail" encodeType="false" />
-        <AttributeEncoder xsi:type="SAML2String" name="urn:oid:0.9.2342.19200300.100.1.3" friendlyName="mail" encodeType="false" />
+        <AttributeEncoder xsi:type="SAML2String" name="urn:oid:0.9.2342.19200300.100.1.3" friendlyName="mail"
+            encodeType="false" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="email" />
         <Template><![CDATA[
                ${uid}@example.org
           ]]></Template>
         <SourceAttribute>uid</SourceAttribute>
     </AttributeDefinition>
-    
-    
-    <!-- Start of static attributes. In real deployment you would use something else than static attributes for most of these attributes/claims -->
-    
-    
-    <!--
-    This is an example of an attribute sourced from a data connector.
 
-    This demonstrates use of OIDCString as array encoder.
-    -->
-    <AttributeDefinition id="eduPersonAffiliation" xsi:type="Simple" sourceAttributeID="affiliation">
-        <Dependency ref="staticAttributes" />
-        <AttributeEncoder xsi:type="oidcext:OIDCString" asArray="true" name="affiliation" />
-    </AttributeDefinition>
-    <!-- 
-    This is an example of an attribute sourced from a data connector.
+    <!-- examples of claim splitting by defining two different email claim definitions -->
 
-    This demonstrates use of OIDCString as int encoder.
-    -->
-    <AttributeDefinition id="age" xsi:type="Simple" sourceAttributeID="age">
-        <Dependency ref="staticAttributes" />
-        <AttributeEncoder xsi:type="oidcext:OIDCString" asInt="true" name="age" />
+    <!-- claim that may be encoded only for userinfo response -->
+    <AttributeDefinition id="email_userinfo" xsi:type="Simple">
+        <Dependency ref="email" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" activationConditionRef="UserInfoPredicate"
+            name="email" />
     </AttributeDefinition>
-    
-    
-    <!-- rest of the claims needed to have set of standard claims -->
-    
-    <AttributeDefinition id="phone_number" xsi:type="Simple" sourceAttributeID="phone_number">
-        <Dependency ref="staticAttributes" />
-        <AttributeEncoder xsi:type="oidcext:OIDCString" name="phone_number" />
+
+    <!-- claim that may be encoded only for id token -->
+    <AttributeDefinition id="email_idtoken" xsi:type="Simple">
+        <Dependency ref="email" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" activationConditionRef="IDTokenPredicate" name="email" />
     </AttributeDefinition>
-    
-    <AttributeDefinition id="phone_number_verified" xsi:type="Simple" sourceAttributeID="phone_number_verified">
-        <Dependency ref="staticAttributes"/>
-        <AttributeEncoder xsi:type="oidcext:OIDCString" asBoolean="true" name="phone_number_verified"/>
-    </AttributeDefinition>
-    
-    <AttributeDefinition id="address" xsi:type="Simple" sourceAttributeID="address">
-        <Dependency ref="staticAttributes"/>
-        <AttributeEncoder xsi:type="oidcext:OIDCString" asObject="true" fieldName="formatted" name="address"/>
-    </AttributeDefinition>
-    
-    <AttributeDefinition id="email_verified" xsi:type="Simple" sourceAttributeID="email_verified">
-        <Dependency ref="staticAttributes" />
-        <AttributeEncoder xsi:type="oidcext:OIDCString" asBoolean="true" name="email_verified"/>
-    </AttributeDefinition>
-    
+
+    <!-- standard claim name fetched from static connector -->
     <AttributeDefinition id="name" xsi:type="Simple" sourceAttributeID="name">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="name" />
     </AttributeDefinition>
-    
+
+    <!-- example of claim splitting by defining two different name claim definitions -->
+
+    <!-- claim that may be encoded only for userinfo response -->
+    <AttributeDefinition id="name_userinfo" xsi:type="Simple">
+        <Dependency ref="name" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" activationConditionRef="UserInfoPredicate"
+            name="name" />
+    </AttributeDefinition>
+
+    <!-- claim that is encoded only for id token -->
+    <AttributeDefinition id="name_idtoken" xsi:type="Simple">
+        <Dependency ref="name" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" activationConditionRef="IDTokenPredicate" name="name" />
+    </AttributeDefinition>
+
+    <!-- Start of static attributes. In actual deployment you would use something else than static attributes for most of 
+        these attributes/claims -->
+
+
+    <!-- This is an example of an attribute sourced from a data connector. This demonstrates use of OIDCString as array encoder. -->
+    <AttributeDefinition id="eduPersonAffiliation" xsi:type="Simple" sourceAttributeID="affiliation">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" asArray="true" name="affiliation" />
+    </AttributeDefinition>
+
+    <!-- This is an example of an attribute sourced from a data connector. This demonstrates use of OIDCString as int encoder. -->
+    <AttributeDefinition id="age" xsi:type="Simple" sourceAttributeID="age">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" asInt="true" name="age" />
+    </AttributeDefinition>
+
+
+    <!-- rest of the claims needed to have set of standard claims -->
+
+    <AttributeDefinition id="phone_number" xsi:type="Simple" sourceAttributeID="phone_number">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" name="phone_number" />
+    </AttributeDefinition>
+
+    <AttributeDefinition id="phone_number_verified" xsi:type="Simple" sourceAttributeID="phone_number_verified">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" asBoolean="true" name="phone_number_verified" />
+    </AttributeDefinition>
+
+    <AttributeDefinition id="address" xsi:type="Simple" sourceAttributeID="address">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" asObject="true" fieldName="formatted" name="address" />
+    </AttributeDefinition>
+
+    <AttributeDefinition id="email_verified" xsi:type="Simple" sourceAttributeID="email_verified">
+        <Dependency ref="staticAttributes" />
+        <AttributeEncoder xsi:type="oidcext:OIDCString" asBoolean="true" name="email_verified" />
+    </AttributeDefinition>
+
     <AttributeDefinition id="family_name" xsi:type="Simple" sourceAttributeID="family_name">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="family_name" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="given_name" xsi:type="Simple" sourceAttributeID="given_name">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="given_name" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="middle_name" xsi:type="Simple" sourceAttributeID="middle_name">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="middle_name" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="nickname" xsi:type="Simple" sourceAttributeID="nickname">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="nickname" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="preferred_username" xsi:type="Simple" sourceAttributeID="preferred_username">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="preferred_username" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="profile" xsi:type="Simple" sourceAttributeID="profile">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="profile" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="website" xsi:type="Simple" sourceAttributeID="website">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="website" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="picture" xsi:type="Simple" sourceAttributeID="picture">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="picture" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="web_site" xsi:type="Simple" sourceAttributeID="web_site">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="web_site" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="gender" xsi:type="Simple" sourceAttributeID="gender">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="gender" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="birthdate" xsi:type="Simple" sourceAttributeID="birthdate">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="birthdate" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="zoneinfo" xsi:type="Simple" sourceAttributeID="zoneinfo">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="zoneinfo" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="locale" xsi:type="Simple" sourceAttributeID="locale">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" name="locale" />
     </AttributeDefinition>
-    
+
     <AttributeDefinition id="updated_at" xsi:type="Simple" sourceAttributeID="updated_at">
         <Dependency ref="staticAttributes" />
         <AttributeEncoder xsi:type="oidcext:OIDCString" asInt="true" name="updated_at" />
     </AttributeDefinition>
-    
+
     <!-- ========================================== -->
-    <!--      Data Connectors                       -->
+    <!-- Data Connectors -->
     <!-- ========================================== -->
     <DataConnector id="staticAttributes" xsi:type="Static">
         <Attribute id="affiliation">
